# ruCodeReviewerBench

./: .env_example  .gitignore  README.md  pyproject.toml  start_llm_model.sh  start_llm_model_docker.sh
benchmark/: README.md  llm_as_a_judge.py  multimetric.py
src/data_collection/: parsing.ipynb
src/data_collection/script_go/: FindFunc  FindFunc.go  _test.go
src/data_collection/script_java/: -  _test.java  pom.xml
src/data_collection/script_java/src/main/java/com/example/: FindFunc.java
src/data_collection/script_python/: _test.py
src/data_collection/script_scala/: _test.sc  build.sbt
src/data_collection/script_scala/.bsp/: sbt.json
src/data_collection/script_scala/src/main/scala/: ScalaCodeAnalyzer.scala
src/data_collection/taxonomy/: create_taxonomy.py  topic_modeling.ipynb
src/figures/: corr.ipynb  visualize.ipynb
src/multimetric/: async_compl.py  get_best_comment.py  multimetric.py  prompts.py
src/rucodereview/: rucodereview.yaml  utils.py
